@@ -34,41 +34,34 @@ bool(true)
 Warning: parse_ini_file(): open_basedir restriction in effect. File(../bad) is not within the allowed path(s): (.) in %s on line %d
 
 Warning: parse_ini_file(../bad): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(): open_basedir restriction in effect. File(../bad/bad.txt) is not within the allowed path(s): (.) in %s on line %d
 
 Warning: parse_ini_file(../bad/bad.txt): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(..): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(): open_basedir restriction in effect. File(../) is not within the allowed path(s): (.) in %s on line %d
 
 Warning: parse_ini_file(../): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(): open_basedir restriction in effect. File(../bad/.) is not within the allowed path(s): (.) in %s on line %d
 
 Warning: parse_ini_file(../bad/.): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(): open_basedir restriction in effect. File(../bad/./bad.txt) is not within the allowed path(s): (.) in %s on line %d
 
 Warning: parse_ini_file(../bad/./bad.txt): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 
 Warning: parse_ini_file(): open_basedir restriction in effect. File(./../.) is not within the allowed path(s): (.) in %s on line %d
 
 Warning: parse_ini_file(./../.): failed to open stream: Operation not permitted in %s on line %d
-array(0) {
-}
+bool(false)
 *** Finished testing open_basedir configuration [parse_ini_file] ***
 
